--- a/productos.html
+++ b/productos.html
@@ -94,6 +94,7 @@
     <script src="./js/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Enlace de VUE-->
     <script src="./js/productos.js"></script>
+    <script src="js/buscador.js"></script>
 </body>
 
 </html>
