--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
     <title>Listar Productos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/c5a16d2e36.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -24,17 +25,19 @@
 </head>
 
 <body>
-    <header id="header">
+    <header id="header" class="header">
         <!-- Coloca la barra de navegación aquí -->
     </header>
     <main>
         <div id="app" class="container">
-            <h1>Catálogo de herramientas</h1>
             <br>
-            <!-- <a class="btn btn-primary" href="producto-create.html">Nuevo</a> -->
-            <!-- <a class="btn btn-primary btn-animate" href="producto-create.html">Nuevo</a> -->
-            <a class="btn btn-primary animate__animated animate__heartBeat btn-animate" href="producto-create.html">Nuevo</a>
+            <h1>Catálogo de celulares</h1>
+            
+            <br>
+
+            <a class="btn btn-primary nuevo" href="producto-create.html">Nuevo producto</a> 
             <br><br>
+          
             <div v-if="error">
                 <p>Lo sentimos, ha ocurrido un error.</p>
             </div>
@@ -45,7 +48,7 @@
                 </section>
                 <section v-else>
                     <div class="table-responsive">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-dark table_id">
                             <thead>
                                 <tr>
                                     <th scope="col">Id</th>
@@ -96,6 +99,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Enlace de VUE-->
     <script src="./js/productos.js"></script>
     <script src="js/buscador.js"></script>
+
 </body>
 
 </html>
